--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "ascii-table": "^0.0.9",
     "axios": "^1.4.0",
     "canvas": "^2.11.0",
-    "chalk": "^4.1.2",
     "common-tags": "^1.8.2",
     "discord-arts": "^0.4.0",
     "discord-canvas": "^1.5.2",
     "discord.js": "^14.13.0",
     "i18n": "^0.15.1",
+    "kleur": "^4.1.5",
     "moment": "^2.29.4",
     "mongoose": "^7.5.4",
     "mustache": "^4.2.0",
