--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node .",
     "dev": "nodemon ./Source/bot.js"
   },
+  "_moduleAliases": {
+    "@src": "./source"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +23,7 @@
     "discord.js": "^14.13.0",
     "i18n": "^0.15.1",
     "kleur": "^4.1.5",
+    "module-alias": "^2.2.3",
     "moment": "^2.29.4",
     "mongoose": "^7.5.4",
     "mustache": "^4.2.0",
