update: change id buttons

--- a/config/componentsId.json
+++ b/config/componentsId.json
@@ -20,6 +20,7 @@
 		}
 	},
 	"buttons": {
-		"deleteReport": "deleteReport"
+		"fixedButton": "fixedButton",
+		"rejectedButton": "rejectedButton"
 	}
 }
