--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"moment": "^2.29.4",
 		"mongoose": "^8.0.1",
 		"nodemon": "^3.0.1",
-		"os": "^0.1.2"
+		"os": "^0.1.2",
+		"uuid": "^9.0.1"
 	}
 }
