update: componens id

--- a/config/componentsId.json
+++ b/config/componentsId.json
@@ -3,8 +3,8 @@
 		"customBackground": "customBackground",
 		"customTag": "customTag",
 		"bugReport": "bugReport",
-		"bugCommand": "bugCommand",
-		"bugDescription": "bugDescription",
+		"reportTitle": "reportTitle",
+		"reportDescription": "reportDescription",
 		"tempChannelName": "tempChannelName",
 		"tempChannelNameInput": "tempChannelNameInput",
 		"tempChannelLimit": "tempChannelLimit",
