add: embed for my server

--- a/config/componentsId.json
+++ b/config/componentsId.json
@@ -21,6 +21,7 @@
 	},
 	"buttons": {
 		"fixedButton": "fixedButton",
-		"rejectedButton": "rejectedButton"
+		"rejectedButton": "rejectedButton",
+		"rulesButton": "rulesButton"
 	}
 }
