--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
 		"common-tags": "^1.8.2",
 		"discord-arts": "^0.5.8",
 		"discord.js": "^14.14.1",
-		"i18n": "^0.15.1",
 		"kleur": "^4.1.5",
 		"module-alias": "^2.2.3",
 		"moment": "^2.29.4",
 		"mongoose": "^8.0.1",
+		"mustache": "^4.2.0",
 		"nodemon": "^3.0.1",
 		"os": "^0.1.2",
 		"uuid": "^9.0.1"
