--- a/package.json
+++ b/package.json
@@ -11,23 +11,25 @@
 		"@source": "./source",
 		"@config": "./config",
 		"@assets": "./assets",
-		"@functions": "./source/functions"
+		"@functions": "./source/functions",
+		"@lib": "./lib"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"ascii-table": "^0.0.9",
-		"axios": "^1.6.3",
+		"axios": "^1.6.2",
 		"canvas": "^2.11.2",
 		"common-tags": "^1.8.2",
 		"discord-arts": "^0.5.8",
 		"discord.js": "^14.14.1",
+		"i18n": "^0.15.1",
 		"kleur": "^4.1.5",
 		"module-alias": "^2.2.3",
-		"mongoose": "^8.0.3",
-		"mustache": "^4.2.0",
-		"nodemon": "^3.0.2",
+		"moment": "^2.29.4",
+		"mongoose": "^8.0.1",
+		"nodemon": "^3.0.1",
 		"os": "^0.1.2",
 		"uuid": "^9.0.1"
 	}
