--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
 		"@config": "./config",
 		"@assets": "./assets",
 		"@functions": "./source/functions",
-		"@lib": "./lib"
+		"@lib": "./lib",
+		"@site": "./site"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"ascii-table": "^0.0.9",
-		"axios": "^1.6.2",
+		"axios": "^1.6.4",
 		"canvas": "^2.11.2",
 		"common-tags": "^1.8.2",
 		"discord-arts": "^0.5.8",
 		"discord.js": "^14.14.1",
+		"express": "^4.18.2",
 		"i18n": "^0.15.1",
 		"kleur": "^4.1.5",
 		"module-alias": "^2.2.3",
