--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"ascii-table": "^0.0.9",
-		"axios": "^1.6.4",
+		"axios": "^1.6.7",
 		"canvas": "^2.11.2",
 		"common-tags": "^1.8.2",
 		"discord-arts": "^0.5.8",
@@ -29,9 +29,10 @@
 		"i18n": "^0.15.1",
 		"kleur": "^4.1.5",
 		"module-alias": "^2.2.3",
-		"moment": "^2.29.4",
-		"mongoose": "^8.0.1",
-		"nodemon": "^3.0.1",
+		"moment": "^2.30.1",
+		"mongoose": "^8.2.0",
+		"node-schedule": "^2.1.1",
+		"nodemon": "^3.1.0",
 		"os": "^0.1.2",
 		"uuid": "^9.0.1"
 	}
