--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
 	"license": "ISC",
 	"dependencies": {
 		"ascii-table": "^0.0.9",
-		"axios": "^1.6.7",
+		"axios": "^1.6.8",
 		"canvas": "^2.11.2",
 		"common-tags": "^1.8.2",
 		"discord-arts": "^0.5.8",
 		"discord.js": "^14.14.1",
-		"express": "^4.18.2",
-		"i18n": "^0.15.1",
+		"express": "^4.18.3",
 		"kleur": "^4.1.5",
 		"module-alias": "^2.2.3",
 		"moment": "^2.30.1",
-		"mongoose": "^8.2.0",
+		"mongoose": "^8.2.2",
+		"mustache": "^4.2.0",
 		"node-schedule": "^2.1.1",
 		"nodemon": "^3.1.0",
 		"os": "^0.1.2",
